# migi

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/migi/: __init__.py  __main__.py  cli.py  config.py  installers.py  json_result.py
src/migi/assets/migi-desktop/: SKILL.md
src/migi/automation/: __init__.py  engine.py
tests/: test_performance_profiles.py
